# envweave

./: .gitignore  .npmrc  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.vue  main.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  dto.rs  lib.rs  main.rs
apps/desktop/src/features/backups/: BackupsPanel.vue
apps/desktop/src/features/diff-editor/: DiffWorkbench.vue  monaco.ts
apps/desktop/src/features/discovery/: DiscoveryPanel.vue
apps/desktop/src/features/dotfiles/: ConfigPanel.vue
apps/desktop/src/features/knowledge/: KnowledgeManager.vue
apps/desktop/src/features/overview/: OverviewPanel.vue
apps/desktop/src/features/repository/: RepositoryPicker.vue
apps/desktop/src/features/restore/: RestorePanel.vue
apps/desktop/src/features/settings/: SettingsPanel.vue
apps/desktop/src/features/sync/: SyncPanel.vue
apps/desktop/src/features/theme/: ThemeShowcase.vue
apps/desktop/src/shared/: api.ts  bindings.ts  errors.ts
crates/envweave-application/: Cargo.toml
crates/envweave-application/src/: lib.rs
crates/envweave-backup/: Cargo.toml
crates/envweave-backup/src/: lib.rs
crates/envweave-diff/: Cargo.toml
crates/envweave-diff/src/: lib.rs
crates/envweave-discovery/: Cargo.toml
crates/envweave-discovery/knowledge/: configurations.toml
crates/envweave-discovery/src/: lib.rs
crates/envweave-domain/: Cargo.toml
crates/envweave-domain/src/: lib.rs
crates/envweave-files/: Cargo.toml
crates/envweave-files/src/: lib.rs
crates/envweave-git/: Cargo.toml
crates/envweave-git/src/: lib.rs
crates/envweave-manifest/: Cargo.toml
crates/envweave-manifest/src/: lib.rs
crates/envweave-packages/: Cargo.toml
crates/envweave-packages/src/: lib.rs
crates/envweave-restore/: Cargo.toml
crates/envweave-restore/src/: lib.rs
crates/envweave-security/: Cargo.toml
crates/envweave-security/src/: lib.rs
docs/: 00-naming.md  01-product-design.md  02-ui-design.md  03-technical-design.md  04-roadmap.md  05-linux-vm-testing.md  05-migration-readiness.md  06-release.md
docs/releases/: v0.1.0-alpha.1.md  v0.1.0-alpha.2.md  v0.1.0-alpha.3.md  v0.1.0-alpha.4.md
scripts/: check-macos-release-secrets.sh  check-release.sh  collect-release-artifacts.sh  import-macos-certificate.sh  linux-guest-test.sh  linux-gui-smoke.sh  linux-vm-test.sh  patch-linux-appimage.sh
