[package]
name = "envweave-files"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
envweave-domain.workspace = true
envweave-manifest = { path = "../envweave-manifest" }
envweave-security = { path = "../envweave-security" }
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
