[package]
name = "envweave-restore"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
envweave-domain.workspace = true
envweave-manifest = { path = "../envweave-manifest" }
envweave-files = { path = "../envweave-files" }
envweave-backup = { path = "../envweave-backup" }
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
blake3.workspace = true

[dev-dependencies]
tempfile.workspace = true
